# cpp-samples

./: .appveyor.yml  .clang-format  .cmake-format.py  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  DEPENDENCIES.md  dependabot.yml  renovate.json
.github/workflows/: dependencies.yaml  style.yaml
batch/cpp_application/: CMakeLists.txt  README.md  application.json  driver.cc  main.cc  vcpkg.json
batch/cpp_application/application/: CMakeLists.txt  Dockerfile  README.md
batch/cpp_application/application/src/: main.cc
batch/parallel/: README.md  finsim.json
batch/parallel/application/: CMakeLists.txt  Dockerfile  README.md  input.txt
batch/parallel/application/src/: finsim.cc
batch/simple/: CMakeLists.txt  Dockerfile  README.md  cloudbuild.yaml  hello-world-container.json  simple.cc  vcpkg.json
bigquery/read/: CMakeLists.txt  README.md  arrow_read.cc  create_query_job.py  requirements.txt  vcpkg.json
bigquery/read/arrow/: CMakeLists.txt  arrow_read.cc  vcpkg.json
bigquery/read/avro/: CMakeLists.txt  avro_read.cc  vcpkg.json
bigquery/write/: .clang-tidy  CMakeLists.txt  README.md  schema.json  schema.proto  single_threaded_write.cc  vcpkg.json
bigtable/: .gitignore  CMakeLists.txt  create_cluster.cc
bigtable/api/: .clang-format  .gitignore  CMakeLists.txt  README.md  create_instance.cc  create_table.cc  delete_instance.cc  delete_table.cc  list_instances.cc  list_tables.cc  parse_taq_line.cc  parse_taq_line.h  read_rows.cc  taq.proto  upload_taq.cc  upload_taq_batch.cc
bigtable/api/ci/: build-linux.sh  build-macosx.sh  build-windows.ps1  cache-linux.sh  install-linux.sh  install-macosx.sh  install-windows.ps1
bigtable/api/cmake/: CompileProtos.cmake
bigtable/api/docker/: Dockerfile.fedora  Dockerfile.ubuntu
bigtable/api/resources/: download_taq.sh
ci/: cloudbuild-setup-bazel.yaml  cloudbuild-setup-conda.yaml  cloudbuild-setup-vcpkg.yaml  cloudbuild.yaml  conda.Dockerfile  devtools.Dockerfile
ci/builds/: checkers.sh  setup-bazel.sh  setup-conda.sh  setup-vcpkg.sh
ci/kokoro/: Dockerfile.check_style  build.sh  check_style.sh  common.cfg  in_docker_check_style.sh
ci/triggers/: cpp-samples-pr.yaml  setup-bazel-pr.yaml  setup-conda-pr.yaml  setup-vcpkg-pr.yaml
cloud-run-hello-world/: CMakeLists.txt  Dockerfile  README.md  bootstrap-cloud-run-hello.sh  cloud_run_hello.cc  cloudbuild.yaml  vcpkg.json
cloud-run-hello-world/ci/kokoro/: build.sh
cloud-run-hello-world/super/: CMakeLists.txt
endpoints/getting-started-grpc/: .gitignore  Dockerfile  Dockerfile-builder  Makefile  README.md  container-engine.yaml  greeter_client.cc  greeter_server.cc
endpoints/getting-started-grpc/grpc-env/: Dockerfile
endpoints/getting-started-grpc/protos/: helloworld.proto
gcs-fast-transfers/: CMakeLists.txt  README.md  download.cc  gcs_fast_transfers.cc  gcs_fast_transfers.h  upload.cc  vcpkg.json
gcs-indexer/: .clang-format  .clang-tidy  .cmake-format.py  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bootstrap-gcs-indexer.sh  cloudbuild.yaml  gcs_indexer_constants.h  generate_randomly_named_objects_config.py  pubsub_handler.cc  refresh-index.sh  refresh_index_for_bucket.cc  refresh_index_for_bucket_config.py  vcpkg.json
gcs-indexer/ci/kokoro/: build.sh
gcs-indexer/super/: CMakeLists.txt
gcs-parallel-download/: CMakeLists.txt  README.md  download.cc  gcs_parallel_download.cc  vcpkg.json
getting-started/: CMakeLists.txt  Dockerfile  README.md  gcs_index_scheduler.cc  gcs_index_worker.cc  gcs_indexing.cc  gcs_indexing.h  gcs_objects.sql  index_gcs_prefix.cc  project.toml  vcpkg.json
getting-started-gke/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  cloudbuild.yaml  index_gcs_prefix.cc  vcpkg.json
getting-started/gke/: README.md  cloudbuild.yaml  index_gcs.cc  print-deployment.py
getting-started/update/: CMakeLists.txt  README.md  project.toml  update_gcs_index.cc  vcpkg.json
iot/mqtt-ciotc/: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  mqtt_ciotc.c  setup_device.sh  test_mqtt_ciotc.sh  vcpkg.json
iot/mqtt-ciotc/ci/kokoro/: build.sh
iot/mqtt-ciotc/docker/: Dockerfile
populate-bucket/: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  README.md  cloudbuild.yaml  deployment.py  populate_bucket.cc  vcpkg.json
populate-bucket/ci/kokoro/: build.sh
pubsub-avro/: CMakeLists.txt  README.md  cleanup.sh  quickstart.cc  schema1.hh  schema2.avro  schema2.hh  setup.sh  vcpkg.json
pubsub-open-telemetry/: .bazelrc  .jaeger_config.yaml  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE.bazel  blocking_publisher.cc  parse_args.cc  parse_args.h  publisher.cc  publisher.md  publisher_helper.cc  publisher_helper.h  publisher_jaeger.cc  publisher_zipkin.cc  quickstart.cc  repro.cc  streaming_pull_subscriber.cc  subscriber.md  unary_pull_subscriber.cc  vcpkg.json
setup/: .bazelrc  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE.bazel  hello_world.cc  vcpkg.json
speech/api/: .gitignore  CMakeLists.txt  Docker.README.md  Dockerfile  Makefile  README.md  async_transcribe.cc  parse_arguments.cc  parse_arguments.h  streaming_transcribe.cc  streaming_transcribe_coroutines.cc  streaming_transcribe_singlethread.cc  transcribe.cc  vcpkg.json
speech/api/ci/kokoro/: build.sh
