# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "parse_args",
    hdrs = ["parse_args.h"],
    srcs = ["parse_args.cc"],
    deps = [
         "@boost//:program_options",
         "@google_cloud_cpp//:pubsub",
         "@google_cloud_cpp//:opentelemetry",
    ],
)

cc_binary(
    name = "publisher",
    srcs = ["publisher.cc"],
      deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
       ":parse_args",
    ],
)

cc_binary(
    name = "quickstart",
    srcs = ["quickstart.cc"],
      deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)
