# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "pubsub-open-telemetery")

# Google Cloud Cpp
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "google_cloud_cpp",
    sha256 = "db69dd73ef4af8b2e816d80ded04950036d0e0dccc274f8c3d3ed1d7f5692a1b",
    strip_prefix = "google-cloud-cpp-2.32.0",
    url = "https://github.com/googleapis/google-cloud-cpp/archive/v2.32.0.tar.gz",
)

load("@google_cloud_cpp//bazel:workspace0.bzl", "gl_cpp_workspace0")

gl_cpp_workspace0()

load("@google_cloud_cpp//bazel:workspace1.bzl", "gl_cpp_workspace1")

gl_cpp_workspace1()

load("@google_cloud_cpp//bazel:workspace2.bzl", "gl_cpp_workspace2")

gl_cpp_workspace2()

load("@google_cloud_cpp//bazel:workspace3.bzl", "gl_cpp_workspace3")

gl_cpp_workspace3()

load("@google_cloud_cpp//bazel:workspace4.bzl", "gl_cpp_workspace4")

gl_cpp_workspace4()

load("@google_cloud_cpp//bazel:workspace5.bzl", "gl_cpp_workspace5")

gl_cpp_workspace5()

load("@io_opentelemetry_cpp//bazel:repository.bzl", "opentelemetry_cpp_deps")

opentelemetry_cpp_deps()

# Boost
http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "085aadb6cd1323740810efcde29e99838286f44e0ab060af6e2a645380316cd6",
    strip_prefix = "rules_boost-504e4dbc8c480fac5da33035490bc2ccc59db749",
    url = "https://github.com/nelhage/rules_boost/archive/504e4dbc8c480fac5da33035490bc2ccc59db749.tar.gz",
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()
